Coalesce similar inline nodes in Composer's CSS mode; b=179055, r=jfrancis, sr=peterv